# genesis-native-v2

./: Cargo.toml
.github/workflows/: ci.yml  pages.yml  stress-test.yml
crates/genesis-core/: Cargo.toml
crates/genesis-core/src/: cell_role.rs  chemistry.rs  genome.rs  lib.rs  metrics.rs
crates/genesis-explore/: Cargo.toml
crates/genesis-explore/src/: lib.rs
crates/genesis-metrics/: Cargo.toml
crates/genesis-metrics/src/: lib.rs
crates/genesis-render/src/: lib.rs
crates/genesis-sim/: Cargo.toml
crates/genesis-sim/src/: components.rs  config.rs  lib.rs  particle_store.rs  resources.rs  saveload.rs
crates/genesis-sim/src/systems/: advanced.rs  behavior.rs  bonds.rs  chemistry.rs  colonies.rs  culture_metacog.rs  diffusion.rs  environment.rs  fields.rs  forces.rs  grid.rs  groups.rs  integrate.rs  metabolism.rs  metrics.rs  mod.rs  organisms.rs  predation.rs  reproduction.rs  sensing.rs  signaling.rs  signals.rs  symbols_tools.rs  v6_systems.rs
crates/genesis-sim/src/util/: spatial_grid.rs
crates/genesis-ui/: Cargo.toml
crates/genesis-ui/src/: lib.rs
src/: main.rs
web/: index.html
